# github-installer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  SDK.md  SKILL.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
tests/: README.md
tests/integration/: test_batch_coverage.py  test_dataset_coverage.py  test_local_coverage.py  test_real_projects.py  test_template_matching.py
tests/unit/: conftest.py  test_auto_update.py  test_auto_update_full.py  test_autopilot.py  test_autopilot_full.py  test_checkpoint.py  test_cmd_coverage.py  test_config_schema.py  test_coverage_boost.py  test_coverage_final.py  test_coverage_main_fetcher.py  test_coverage_misc.py  test_coverage_web.py  test_db.py  test_dep_chain.py  test_dependency_audit.py  test_detector.py  test_doctor.py  test_doctor_checks.py  test_enterprise.py  test_error_fixer.py  test_event_bus.py  test_executor.py  test_feature_flags.py  test_fetcher.py  test_fetcher_local.py  test_hw_detect.py  test_installer_registry.py  test_llm.py  (+29 more)
tools/: __init__.py  _sdk.py  academic.py  admin.html  auto_update.py  autopilot.py  badge.py  checkpoint.py  cicd.py  clawhub.html  config_schema.py  db.py  db_backend.py  dep_chain.py  dependency_audit.py  detector.py  doctor.py  education.py  enterprise.py  error_fixer.py  event_bus.py  executor.py  feature_flags.py  fetcher.py  huggingface.py  hw_detect.py  i18n.py  installer_registry.py  knowledge_base.py  license_check.py  llm.py  log.py  main.py  mcp_agent.py  mcp_server.py  monorepo.py  multi_source.py  onboard.py  planner.py  planner_helpers.py  (+13 more)
vscode-extension/: README.md  package.json
(+1 files in other folders)
